@@ -1,3 +1,11 @@
+2020-12-23  Jim Fowler  <jrf@biblion>
+
+	* Tools/python/aabooks/ajbbook/menus.py (create_edit_menu): Began
+	adding a Sort By menu to ajbbooks. Added menu with empty actions
+	for sort by AJB/AAA number, sort by author, and restore original
+	order.  Don't know how I might restore the original order yet;
+	particularly if an entry is added or deleted.
+
 2020-12-22  Jim Fowler  <jrf@biblion>
 
 	* Tools/python/scripts/verify (main): Added pagination
